--- a/generator-react-webpack/src/index.html
+++ b/generator-react-webpack/src/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 	<div class="layout">
-		<div id="app">APPLICATION CONTENT</div>
+		<div id="app">加载。。。</div>
 	</div>
 
   	<script>__REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__</script>
